tests/negative/misc/improper-module-name.orng
// improper-module-name.orng: error: symbol `improper-module-name` has an improper module name
// 
fn main() -> Int { 0 }